# Chvatal-Sankoff-simulations

./: CMakeLists.txt  crochemore.cpp  crochemore_paralell.cpp  lcs.cpp  regression.py  results.txt  temp.cpp
